--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Data Science Web Application</title>
+    <title>H2O</title>
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=11"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
